Basic Styled and some added logic

--- a/app/views/longestword/home.html.erb
+++ b/app/views/longestword/home.html.erb
@@ -1,6 +1,8 @@
-<h1>Longest Word Game</h1>
-<form action="/game" method="GET">
-  <label for="size">Specify length of board</label>
-  <input type="text" id="size" name="size" placeholder="6">
-  <input type="submit" value="Start!">
-</form>
+<h1 class="center">Longest Word Game</h1>
+<div class="card center">
+	<form action="/game" method="GET">
+	  <label for="size">Specify length of board:  </label>
+	  <input type="text" id="size" name="size" placeholder="6">
+	  <input type="submit" value="Start!">
+	</form>
+</div>
