--- a/app/assets/stylesheets/longestword.scss
+++ b/app/assets/stylesheets/longestword.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the longestword controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.containter{
+	width: 100%;
+	height: 900px;
+}
+.center{
+	margin: 0 auto;
+	text-align: center;
+}
+.card {
+	padding: 30px;
+}
+.list-inline li{
+	list-style: none;
+	display: inline-block;
+	padding: 10px;
+	font-size: 2em;
+}
+
