--- a/app/views/longestword/score.html.erb
+++ b/app/views/longestword/score.html.erb
@@ -1,6 +1,19 @@
-<h1>Longestword#score</h1>
-<p>Find me in app/views/longestword/score.html.erb</p>
+<div class="card center">
+	<h1>SCORE: <%= @result[:score] %></h1>
+</div>
+<div class="card center">
 
-<%= @result[:translation] %>
-<%= @result[:message] %>
-<%= @result[:score] %>
+	<h2>You guessed: <%= @attempt %></h2> 
+</div> 
+<div class="card center">
+	<h2>Which translates to: 
+	<%= @result[:translation] == "" ? "nothing" : @result[:translation] %> in French</h2>	
+</div>
+<div class="card center">	
+	<h2><%= @result[:message] %></h2>
+</div>
+
+
+<div class="card ceneter">
+	<%= link_to "Play Again", "/" %>
+</div>
